Hole cutting updates

--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 CartesianDomains = "31d3d393-e656-4614-8ab7-f376885a6db2"
 CurvilinearGrids = "58b19789-dd19-4aa2-839c-c763a7b10301"
+WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
