--- a/Project.toml
+++ b/Project.toml
@@ -5,8 +5,10 @@ version = "0.1.0"
 
 [deps]
 CurvilinearGrids = "58b19789-dd19-4aa2-839c-c763a7b10301"
+FlameGraphs = "08572546-2f56-4bcf-ba4e-bab62c3a3f89"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
 CurvilinearGrids = "0.8.1"
+FlameGraphs = "1.1.0"
 WriteVTK = "1.21.2"
