--- a/Project.toml
+++ b/Project.toml
@@ -5,16 +5,20 @@ version = "0.1.0"
 
 [deps]
 CurvilinearGrids = "58b19789-dd19-4aa2-839c-c763a7b10301"
+ImplicitBVH = "932a18dc-bb55-4cd5-bdd6-1368ec9cea29"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
+StatProfilerHTML = "a8a75453-ed82-57c9-9e16-4cd1196ecbf5"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
 CurvilinearGrids = "0.8.1"
+ImplicitBVH = "0.6.0"
 LinearAlgebra = "1.11.0"
 NearestNeighbors = "0.4.22"
+StatProfilerHTML = "1.6.0"
 StaticArrays = "1.9.13"
 Test = "1.11.0"
 WriteVTK = "1.21.2"
